--- a/content/econ03ge3a/growth-record-of-indian-economy.Rmd
+++ b/content/econ03ge3a/growth-record-of-indian-economy.Rmd
@@ -7,3 +7,28 @@ output: html_document
 
 ## Reference
 [Growth Record of the Indian Economy, 1950-2008: A Story of Sustained Savings and Investment](rakesh-mohan.pdf)
+
+## Introduction
+- Review of macroeconomic performance in India since independence.
+- India's growth has been largely enabled by the availability of domestic savings, which has increased steadily over the decades.
+- High efficiency of resource use with a long term incremental capital-output ratio of around 4 (comparably best in the world).
+- Private investment and corporate growth have been the major factors in the recent growth upsurge. Public investment has seen a steady decline during this period.
+- Revival of public investment, along with higher public savings would be required to expand public services.
+
+## Growth acceleration over the decades.
+- Indian economy witnessed near stagnation in real GDP growth till the late 1970s.
+- Growth of manufacturing products in terms of decadal averages was constant around 5.6-5.9% in the first five decades after independence.
+- Agricultural growth has been subject to large variations over the decades.
+- A glance at the growth records suggest that it is the continuing and consistent acceleration in growth in services that had earlier been ignored, that really accounts for the continuous acceleration in the overall GDP growth but except for the 1970s.
+- The slowdown of growth during the 1970s was reversed during the 1980s due to the reforms aimed at increasing domestic competitiveness.
+
+![Table 1](Table1.PNG)
+
+- Growth impulses gathered further momentum since the early 1990s.
+- There was a loss of growth momentum during the latter half of the 90s due to the onset of east Asian financial crisis which had a setback on the fiscal correction process, quality of fiscal adjustment, slowdown in agricultural growth affected by lower than normal monsoon years, and some slackening in the pace of structural reforms.
+- The slowdown could also be attributed to the excessive enthusiasm in the investment plans in domestic industry following deregulation.
+- Monetary tightening in the face of inflationary pressures is also believed to have contributed to the slowdown.
+- Since 2003-04, there has been a distinct strengthening of the growth momentum. 
+- Restructuring measures by domestic industry, overall reduction in domestic interest rates, both nominal and real, improved corporate profitability, a benign investment climate amidst strong global demand have led real GDP growth averaging close to 9% per annum over the four year period ended 2006-07. 
+
+## Consistent growth in Savings and Investment
