--- a/content/econ03ge3a/A-new-India.Rmd
+++ b/content/econ03ge3a/A-new-India.Rmd
@@ -11,6 +11,8 @@ output: html_document
 
 ---
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/t_8-undxXJk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 ## Introduction
 - The recent achievements of modern, democratic India are not inconsiderable, and have been widely recognized across the globe over the last decade or more. 
 - India’s record in pioneering democratic governance in the non-Western world is a widely acknowledged accomplishment, as is its basic success in maintaining a secular state, despite the challenges arising from its thoroughly multi-religious population and the hugely problematic history of violence around the ending days of the Raj. 
