--- a/content/econ03ge3a/The-Recovery-of-India.Rmd
+++ b/content/econ03ge3a/The-Recovery-of-India.Rmd
@@ -11,6 +11,18 @@ output: html_document
 - [Visible Hand: Public Policy and Economic Growth in the Nehru Era](https://core.ac.uk/download/pdf/19918818.pdf)
 - [The Recovery of India](https://www.jstor.org/stable/40276833?seq=1#page_scan_tab_contents)
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/K0t9PrHazYQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/cAKzhx9yFgY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/TZjfLPWI-ZU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/ps7iEGLyTdc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/xzBr1562LC4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+
 ## Introduction
 - Paper written by PB in 2007 when Indian economy was growing at around 9% (constant prices).
 - A certain despondency induced by a sense of an allegedly "wasted past".
