--- a/working/2.GrowthAndDistributionRegimes.Rmd
+++ b/working/2.GrowthAndDistributionRegimes.Rmd
@@ -10,7 +10,7 @@ output: ioslides_presentation
 
 ## Reference
 
-Vamsi Vakulabharanam & Rahul De (2016) [Growth and Distribution Regimes in India after Independence](slides/vamsi.pdf), The Round Table, 105:6, 621-640, DOI: 10.1080/00358533.2016.1246860
+Vamsi Vakulabharanam & Rahul De (2016) [Growth and Distribution Regimes in India after Independence](vamsi.pdf), The Round Table, 105:6, 621-640, DOI: 10.1080/00358533.2016.1246860
 
 
 ## Introduction
