--- a/working/2.GrowthAndDistributionRegimes.Rmd
+++ b/working/2.GrowthAndDistributionRegimes.Rmd
@@ -222,7 +222,7 @@ Urban inequality (1967-80)
       - raising fiscal deficit
       - increased external commercial borrowings (ECB)
   - Collapse of the ISI regime (beginning of 1980s)
-See [Table 1](Table1.PNG)
+See [Table 1](slides/Table1.PNG)
 
   
 
