--- a/content/econ03ge3a/slides.Rmd
+++ b/content/econ03ge3a/slides.Rmd
@@ -7,3 +7,4 @@ output: html_document
 
 - [1. The Colonial Legacy](1.TheColonialLegacy.html){target="_blank"}
 - [2. Growth and Distribution Regimes in India](2.GrowthAndDistributionRegimes.html){target="_blank"}
+- [3. Growth Record of Indian Economy](3.growth-record-of-indian-economy.html){target="_blank"}
