--- a/working/3.growth-record-of-indian-economy.Rmd
+++ b/working/3.growth-record-of-indian-economy.Rmd
@@ -8,7 +8,7 @@ output:
 ---
 
 ## Reference
-[Growth Record of the Indian Economy, 1950-2008: A Story of Sustained Savings and Investment](rakeshmohan.pdf) by **Rakesh Mohan, 2008**, Economic and Political Weekly.
+[Growth Record of the Indian Economy, 1950-2008: A Story of Sustained Savings and Investment](slides/rakeshmohan.pdf) by **Rakesh Mohan, 2008**, Economic and Political Weekly.
 
 
 
@@ -217,7 +217,7 @@ Barring the decade of the 1970s, the incremental capital output ratio has hovere
 
 ---
 
-[Economic terms used in the text](EconomicTerms.docx)
+[Economic terms used in the text](slides/EconomicTerms.docx)
 
-- [Eco]
+
  
